--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 obj
 .vs
 .vscode
+.idea
 node_modules
+.DS_Store
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
