--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "htmldiff-js",
-  "version": "1.0.5",
-  "description": "JavaScript port of HtmlDiff.Net which is itself a C# port of HtmlDiff",
+  "name": "arsoba-htmldiff-js",
+  "version": "1.0.6",
   "main": "./dist/htmldiff.min.js",
-  "author": "Jordan Hitch",
   "license": "ISC",
   "scripts": {
     "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dfoverdx/htmldiff-js.git"
+    "url": "git+https://github.com/arsoba/htmldiff-js.git"
   },
   "keywords": [
     "HtmlDiff",
@@ -19,10 +17,6 @@
     "Diff Algorithm",
     "Diff Structured File"
   ],
-  "bugs": {
-    "url": "https://github.com/dfoverdx/htmldiff-js/issues"
-  },
-  "homepage": "https://github.com/dfoverdx/htmldiff-js#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
